--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,34 @@ body {
     background-color: #E3B873;
 }
 
+.button-submit {
+    background-color: #E3B873;
+    width: 200px;
+    height: 51px;
+    text-transform: uppercase;
+}
+
+input {
+    outline: none;
+}
+
+.input {
+    height: 30px;
+    width: 230px;
+    border: none;
+    border-bottom: 1px solid rgba(54, 54, 54, 0.3);
+    box-sizing: border-box;
+    color: #363636;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 23px;
+}
+
+.input::placeholder {
+    color: #363636;
+}
+
 .title {
     font-family: Yeseva One;
     font-style: normal;
@@ -173,7 +201,6 @@ body footer {
     height: 552px;
     padding-bottom: 415px;
     margin: 107px 134.5px 0px;
-    background-color: darkred;
     display: flex;
     justify-content: space-between;
 }
@@ -183,9 +210,9 @@ body footer {
     max-width: 442px;
 }
 
-/* .text-holder {
-
-} */
+.text-holder {
+    margin-top: 70px;
+}
 
 .projects-intro {
     font-style: normal;
@@ -203,6 +230,7 @@ body footer {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    margin-top: 57px;
 }
 
 
@@ -233,6 +261,7 @@ body footer {
     bottom: 5px;
     display: flex;
     align-items: center;
+    outline: none;
 }
 
 /* .slider-control__previous {
@@ -259,6 +288,7 @@ body footer {
     padding: 0px;
     margin-block-start: 0px;
     margin-block-end: 0px;
+    height: 27px;
 }
 
 .projects-names__item {
@@ -270,4 +300,143 @@ body footer {
     text-transform: uppercase;
     color: rgba(255, 255, 255, 0.3);
     margin-right: 30px;
+}
+
+.projects-names__item:hover {
+    cursor: pointer;
+    color: #E3B873;
+    padding-bottom: 8px;
+    border-bottom: 1px solid #E3B873;
+}
+
+.img-holder {
+    max-width: 679px;
+    max-height: 482px;
+    margin-top: 45px;
+}
+
+.img-holder__item {
+    width: 100%;
+    height: 100%;
+}
+
+.online-control-section {
+    display: flex;
+    justify-content: center;
+    background-color: transparent;
+    margin-top: -329px;
+    z-index: 1;
+}
+
+.video-holder {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.video-holder__title {
+    font-family: Yeseva One;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 28px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    margin-block-start: 0px;
+    margin-block-end: 0px;
+}
+
+.video-holder__camera {
+    margin-top: 20px;
+}
+
+.video-holder__video {
+    max-width: 817px;
+    height: 434px;
+    margin: 21px auto 62.5px;
+}
+
+.onlite-control__line {
+    width: 55px;
+    border: 1.5px solid #E3B873;
+    opacity: 0.3;
+    border-radius: 30px;
+}
+
+.onlite-control__text {
+    max-width: 681px;
+    margin: 34.5px auto 91.5px;
+    text-align: center;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 37px;
+    text-align: center;
+    color: #363636;
+}
+
+.user-form {
+    max-width: 800px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
+    padding-bottom: 148px;
+}
+
+.user-form__item {
+    margin-right: 57px;
+    display: flex;
+    flex-direction: column;
+}
+
+.user-form__label {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 13px;
+    line-height: 21px;
+    color: rgba(54, 54, 54, 0.5);
+}
+
+.user-form__agreement {
+    margin-top: 35px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 23px;
+    color: #181818;
+    display: flex;
+    align-items: center;
+}
+
+.label {
+    cursor: pointer;
+    display: inline-flex;
+    align-items: center;
+}
+
+.checkbox{
+    display: none;
+}
+
+.fake{
+    display: inline-flex;
+    width: 18px;
+    height: 18px;
+    border-radius: 1px;
+    background: #E3B873;
+    color: #fff;
+    justify-content: center;
+    margin-right: 9px;
+}
+
+.fake::before{
+    content: url(../img/checkmark.svg);
+    opacity: 0;
+    transition: .2s;
+}
+
+.checkbox:checked + .fake::before{
+    opacity: 1;
 }
