--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,8 @@ body footer {
 
 .home-section-background {
     width: 100%;
-    height: 707px;
+    height: 100vh;
+    height: calc(100vh - 83px);
     background-image: url(../img/home_page_img.jpg);
     background-size: cover;
     background-position: center;
