--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,25 @@ body {
     text-transform: uppercase;
 }
 
+.button-repair-type {
+    position: absolute;
+    bottom: -26px;
+    background-color: #E3B873;
+    box-shadow: 5px 5px 10px rgba(227, 184, 115, 0.3);
+    border: none;
+    width: 228px;
+    height: 54px;
+    border-radius: 0px;
+    font-family: Yeseva One;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 25px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+
+}
+
 input {
     outline: none;
 }
@@ -446,6 +465,7 @@ body footer {
     background-color: transparent;
     display: flex;
     flex-direction: column;
+    margin-bottom: 124px;
 }
 
 .repair-types-section__title {
@@ -468,11 +488,13 @@ body footer {
 .repair-types {
     display: flex;
     justify-content: space-between;
+    margin-top: 31px;
 }
 
 .repair-types__item {
     max-width: 392px;
     max-width: 608px;
+    padding-bottom: 28px;
 }
 
 .repair-types__item img {
@@ -489,7 +511,7 @@ body footer {
     color: #363636;
     margin-block-start: 0px;
     margin-block-end: 0px;
-    margin: 25px 0px 13px 34px;
+    margin: 0px 0px 13px 34px;
 }
 
 .repair-type-info {
@@ -499,6 +521,8 @@ body footer {
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
     margin-top: -127px;
     margin: -127px auto 0px;
+    padding: 25px 0px 50px;
+    position: relative;
 }
 
 .repair-type-info__list {
@@ -509,4 +533,6 @@ body footer {
     color: #959595;
     padding-inline-start: 14px;
     margin-left: 34px;
+    margin-block-start: 0px;
+    margin-block-end: 0px;
 }
