--- a/css/style.css
+++ b/css/style.css
@@ -536,3 +536,48 @@ body footer {
     margin-block-start: 0px;
     margin-block-end: 0px;
 }
+
+
+.our-advantages-section {
+    display: flex;
+}
+
+.advantages-list {
+    background-image: url(../img/backgnd_with_houses.jpg);
+    background-size: cover;
+    padding-top: 23px;
+    padding-bottom: 46px;
+}
+
+.advantages-list__item {
+    display: flex;
+    align-items: center;
+    margin-top: 86px;
+    margin-left: 241px;
+}
+
+.advantages-list__bullet {
+    background: #E3B873;
+    border: 8px solid #FFFFFF;
+    box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.15);
+    border-radius: 30px;
+    width: 42px;
+    height: 42px;
+    margin-right: 9px;
+    text-align: center;
+    font-family: Yeseva One;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 42px;
+    color: #FFFFFF;
+}
+
+.advantages-list__text {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 19px;
+    color: #363636;
+}
+
