--- a/css/style.css
+++ b/css/style.css
@@ -581,3 +581,22 @@ body footer {
     color: #363636;
 }
 
+.about-us-section {
+    width: 100%;
+    height: 100vh;
+    background-image: url(../img/about_us_backgnd.jpg);
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    color: #FFFFFF;
+}
+
+.about-us__map {
+    height: 465px;
+    width: 925px;
+    background-image: url(../img/about_us_map.jpg);
+    background-size: cover;
+    margin: auto;
+    margin-bottom: 66px;
+    margin-top: 423px;
+}
